Dropped v1 implementation, minor optimization MainFrame.java